--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/PeriodoPresupuesto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/PeriodoPresupuesto/Nuevo.cshtml
@@ -62,7 +62,7 @@
             </div>
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="FechaFin"></label>
+                    <label for="EstadoCierre"></label>
                     @Html.DevExpress().CheckBoxFor(q => q.EstadoCierre, settings =>
                     {
                         settings.Name = "EstadoCierre";
