--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Anular.cshtml
@@ -30,14 +30,14 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="pe_mes">Mes</label>
-                    @Html.DropDownListFor(q => q.pe_mes, new SelectList(ViewBag.lst_Mes, "idMes", "smes"), new { @class = "form-control", @id = "smes", @readonly = "readonly" })
+                    @Html.DropDownListFor(q => q.pe_mes, new SelectList(ViewBag.lst_Mes, "idMes", "smes"), new { @class = "form-control", @id = "smes", @disabled = true })
                     @Html.ValidationMessageFor(q => q.pe_mes, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdanioFiscal">Año fiscal</label>
-                    @Html.DropDownListFor(q => q.IdanioFiscal, new SelectList(ViewBag.lst_anio_fiscal, "IdanioFiscal", "IdanioFiscal"), new { @class = "form-control", @id = "IdanioFiscal", @readonly = "readonly" })
+                    @Html.DropDownListFor(q => q.IdanioFiscal, new SelectList(ViewBag.lst_anio_fiscal, "IdanioFiscal", "IdanioFiscal"), new { @class = "form-control", @id = "IdanioFiscal", @disabled = true })
                     @Html.ValidationMessageFor(q => q.IdanioFiscal, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -97,9 +97,14 @@
         <div class="col-md-12">
             <div class="col-md-4">
                 <div class="form-group">
-                    <div class="checkbox">
-                        <label for="pe_cerrado_bool">@Html.CheckBoxFor(q => q.pe_cerrado_bool) Cerrado</label>
-                    </div>
+                    @Html.DevExpress().CheckBoxFor(q => q.pe_cerrado_bool,
+                         settings =>
+                         {
+                             settings.Name = "pe_cerrado_bool";
+                             settings.Checked = false;
+                             settings.Text = "Cerrado";
+                         }
+                     ).GetHtml()
                 </div>
             </div>
         </div>
@@ -117,7 +122,7 @@
 
 <script>
     $(function () {
-        actualizar_periodo();
+        //actualizar_periodo();
     });
     $("#pe_mes").change(function () {
         actualizar_periodo();
