--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/RubroPresupuesto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/RubroPresupuesto/Nuevo.cshtml
@@ -39,13 +39,20 @@
                     @Html.ValidationMessageFor(q => q.IdRubroTipo, "", new { @class = "text-danger" })
                 </div>
             </div>
+            @if (Model.AsignaCuentaRubro == true)
+            {
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="IdCtaCble">Cuenta contable de utilidad</label>
+                    <label for="IdCtaCble">Cuenta contable</label>
                     @Html.Partial("_CmbCuentaContable", Model.IdCtaCble)
                     @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
             </div>
+            }
+            else
+            {
+                @Html.HiddenFor(q => q.IdCtaCble);
+            }
         </div>
     </div>
     <div class="box-footer">
