baby shark dododododo

--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Nuevo.cshtml
@@ -146,7 +146,6 @@
             </div>
         </div>
     }
-
     <div class="modal fade" id="ModalFacturas" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
@@ -215,7 +214,6 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -241,7 +239,7 @@
             </div>
             <div class="col-md-1">
                 <div class="form-group">
-                    <label for=""> </label>
+                    <label for="btn_buscar">                    </label>
                     <button type="button" class="btn btn-primary form-control" id="btn_buscar" onclick="MostrarModalFacturas();">
                         <i class="fa fa-search"></i> Facturas
                     </button>
@@ -269,7 +267,6 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
