--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/RubroPresupuesto/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/RubroPresupuesto/Anular.cshtml
@@ -68,7 +68,7 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index", "RubroPresupuesto", new { Area ="Presupuesto" }, null)">Cancelar</a>
     </div>
 
