--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Modificar.cshtml
@@ -11,10 +11,10 @@
 
 @using (Html.BeginForm("Modificar", "PlanDeCuentas", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa);
-    @Html.HiddenFor(q => q.IdCtaCble);
-    @Html.HiddenFor(q => q.IdNivelCta);
-    @Html.HiddenFor(q => q.IdCtaCblePadre);
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdCtaCble)
+    @Html.HiddenFor(q => q.IdNivelCta)
+    @Html.HiddenFor(q => q.IdCtaCblePadre)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
