--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Nuevo.cshtml
@@ -11,6 +11,7 @@
 
 @using (Html.BeginForm("Nuevo", "PlanDeCuentas", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa"})
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -120,6 +121,7 @@
         var IdCtaCble_padre = IdCtaCblePadre.GetValue();
         if (IdCtaCble_padre != "") {
             var datos = {
+                IdEmpresa: $("#IdEmpresa").val(),
                 IdCtaCble_padre: IdCtaCble_padre
             }
             $.ajax({
