--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
@@ -51,8 +51,8 @@
         <div class="col-md-12">
             <div class="form-group">
                 <label for="ca_descripcion">Descripción*</label>
-                @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Observacion, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(q => q.Descripcion, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "text-danger" })
 
 
             </div>
