--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
@@ -168,7 +168,8 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id="IdEmpresa"})
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
-    <div class="row">
+    @Html.HiddenFor(q => q.IdFabricacion)
+ <div class="row">
         <div class="col-md-3">
             <div class="col-md-12">
                 <div class="form-group">
