--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Plan de cuentas";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -10,5 +10,10 @@
 
 @using (Html.BeginForm())
 {
+    <div class="row">
+        <div class="col-md-12">
+            <a class="btn btn-primary" href="@Url.Action("Importar","PlanDeCuentas",new { Area = "Contabilidad", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
+        </div>
+    </div>
     @Html.Action("GridViewPartial_plancta")
 }
